[project]
name = "customer-support-env"
version = "0.1.0"
description = "Customer Support AI Environment"
authors = [{name = "Your Name"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
